@@ -1,5 +1,8 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.410 2005/12/01 19:18:27 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.411 2005/12/01 21:29:30 rocket Exp $
+
+  01 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
+  Fix folder name for grp build dir to not have .tar.bz2 at the end
 
   01 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.conf,
   modules/catalyst_support.py, modules/generic_stage_target.py:
